src/de/dhbw/compiler/antlrxparser/XParser.java
// $ANTLR 3.5.2 C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g 2019-05-23 13:19:42
package de.dhbw.compiler.antlrxparser;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class XParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "DECL", "DECLLIST", "DIGIT", "DIGIT0", 
		"FLOATCONST", "ID", "INTCONST", "INVALID", "LETTER", "STATLIST", "STRINGCONST", 
		"SYMBOL", "UMINUS", "WS", "'('", "')'", "'*'", "'+'", "'-'", "'.'", "'/'", 
		"':'", "':='", "';'", "'<'", "'='", "'>'", "'begin'", "'else'", "'end'", 
		"'float'", "'for'", "'if'", "'int'", "'print'", "'program'", "'read'", 
		"'string'", "'then'", "'while'"
	};
	public static final int EOF=-1;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int DECL=4;
	public static final int DECLLIST=5;
	public static final int DIGIT=6;
	public static final int DIGIT0=7;
	public static final int FLOATCONST=8;
	public static final int ID=9;
	public static final int INTCONST=10;
	public static final int INVALID=11;
	public static final int LETTER=12;
	public static final int STATLIST=13;
	public static final int STRINGCONST=14;
	public static final int SYMBOL=15;
	public static final int UMINUS=16;
	public static final int WS=17;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public XParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public XParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return XParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:44:1: program : 'program' ID ';' declist block '.' EOF -> ^( 'program' ID ^( DECLLIST ( declist )? ) block ) ;
	public final XParser.program_return program() throws RecognitionException {
		XParser.program_return retval = new XParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal1=null;
		Token ID2=null;
		Token char_literal3=null;
		Token char_literal6=null;
		Token EOF7=null;
		ParserRuleReturnScope declist4 =null;
		ParserRuleReturnScope block5 =null;

		Object string_literal1_tree=null;
		Object ID2_tree=null;
		Object char_literal3_tree=null;
		Object char_literal6_tree=null;
		Object EOF7_tree=null;
		RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
		RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
		RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
		RewriteRuleSubtreeStream stream_declist=new RewriteRuleSubtreeStream(adaptor,"rule declist");

		try {
			// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:44:8: ( 'program' ID ';' declist block '.' EOF -> ^( 'program' ID ^( DECLLIST ( declist )? ) block ) )
			// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:44:11: 'program' ID ';' declist block '.' EOF
			{
			string_literal1=(Token)match(input,39,FOLLOW_39_in_program308);  
			stream_39.add(string_literal1);

			ID2=(Token)match(input,ID,FOLLOW_ID_in_program310);  
			stream_ID.add(ID2);

			char_literal3=(Token)match(input,27,FOLLOW_27_in_program312);  
			stream_27.add(char_literal3);

			pushFollow(FOLLOW_declist_in_program314);
			declist4=declist();
			state._fsp--;

			stream_declist.add(declist4.getTree());
			pushFollow(FOLLOW_block_in_program316);
			block5=block();
			state._fsp--;

			stream_block.add(block5.getTree());
			char_literal6=(Token)match(input,23,FOLLOW_23_in_program318);  
			stream_23.add(char_literal6);

			EOF7=(Token)match(input,EOF,FOLLOW_EOF_in_program320);  
			stream_EOF.add(EOF7);

			// AST REWRITE
			// elements: declist, ID, block, 39
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 44:50: -> ^( 'program' ID ^( DECLLIST ( declist )? ) block )
			{
				// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:44:53: ^( 'program' ID ^( DECLLIST ( declist )? ) block )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_39.nextNode(), root_1);
				adaptor.addChild(root_1, stream_ID.nextNode());
				// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:44:68: ^( DECLLIST ( declist )? )
				{
				Object root_2 = (Object)adaptor.nil();
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(DECLLIST, "DECLLIST"), root_2);
				// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:44:79: ( declist )?
				if ( stream_declist.hasNext() ) {
					adaptor.addChild(root_2, stream_declist.nextTree());
				}
				stream_declist.reset();

				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_1, stream_block.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class declist_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "declist"
	// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:45:1: declist : ( declaration )* ;
	public final XParser.declist_return declist() throws RecognitionException {
		XParser.declist_return retval = new XParser.declist_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope declaration8 =null;


		try {
			// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:45:8: ( ( declaration )* )
			// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:45:11: ( declaration )*
			{
			root_0 = (Object)adaptor.nil();


			// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:45:11: ( declaration )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==ID||LA1_0==38||LA1_0==40) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:45:11: declaration
					{
					pushFollow(FOLLOW_declaration_in_declist344);
					declaration8=declaration();
					state._fsp--;

					adaptor.addChild(root_0, declaration8.getTree());

					}
					break;

				default :
					break loop1;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declist"


	public static class block_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "block"
	// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:46:1: block : 'begin' stmtlist 'end' -> ^( STATLIST ( stmtlist )? ) ;
	public final XParser.block_return block() throws RecognitionException {
		XParser.block_return retval = new XParser.block_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal9=null;
		Token string_literal11=null;
		ParserRuleReturnScope stmtlist10 =null;

		Object string_literal9_tree=null;
		Object string_literal11_tree=null;
		RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
		RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
		RewriteRuleSubtreeStream stream_stmtlist=new RewriteRuleSubtreeStream(adaptor,"rule stmtlist");

		try {
			// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:46:6: ( 'begin' stmtlist 'end' -> ^( STATLIST ( stmtlist )? ) )
			// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:46:11: 'begin' stmtlist 'end'
			{
			string_literal9=(Token)match(input,31,FOLLOW_31_in_block354);  
			stream_31.add(string_literal9);

			pushFollow(FOLLOW_stmtlist_in_block356);
			stmtlist10=stmtlist();
			state._fsp--;

			stream_stmtlist.add(stmtlist10.getTree());
			string_literal11=(Token)match(input,33,FOLLOW_33_in_block358);  
			stream_33.add(string_literal11);

			// AST REWRITE
			// elements: stmtlist
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 46:34: -> ^( STATLIST ( stmtlist )? )
			{
				// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:46:37: ^( STATLIST ( stmtlist )? )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(STATLIST, "STATLIST"), root_1);
				// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:46:48: ( stmtlist )?
				if ( stream_stmtlist.hasNext() ) {
					adaptor.addChild(root_1, stream_stmtlist.nextTree());
				}
				stream_stmtlist.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "block"


	public static class stmtlist_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "stmtlist"
	// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:47:1: stmtlist : ( stmtWithSemi )* ;
	public final XParser.stmtlist_return stmtlist() throws RecognitionException {
		XParser.stmtlist_return retval = new XParser.stmtlist_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope stmtWithSemi12 =null;


		try {
			// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:47:9: ( ( stmtWithSemi )* )
			// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:47:12: ( stmtWithSemi )*
			{
			root_0 = (Object)adaptor.nil();


			// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:47:12: ( stmtWithSemi )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==ID||LA2_0==31||(LA2_0 >= 35 && LA2_0 <= 36)||LA2_0==43) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:47:12: stmtWithSemi
					{
					pushFollow(FOLLOW_stmtWithSemi_in_stmtlist374);
					stmtWithSemi12=stmtWithSemi();
					state._fsp--;

					adaptor.addChild(root_0, stmtWithSemi12.getTree());

					}
					break;

				default :
					break loop2;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "stmtlist"


	public static class stmtWithSemi_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "stmtWithSemi"
	// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:49:1: stmtWithSemi : stmt ';' -> stmt ;
	public final XParser.stmtWithSemi_return stmtWithSemi() throws RecognitionException {
		XParser.stmtWithSemi_return retval = new XParser.stmtWithSemi_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal14=null;
		ParserRuleReturnScope stmt13 =null;

		Object char_literal14_tree=null;
		RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
		RewriteRuleSubtreeStream stream_stmt=new RewriteRuleSubtreeStream(adaptor,"rule stmt");

		try {
			// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:49:13: ( stmt ';' -> stmt )
			// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:49:15: stmt ';'
			{
			pushFollow(FOLLOW_stmt_in_stmtWithSemi382);
			stmt13=stmt();
			state._fsp--;

			stream_stmt.add(stmt13.getTree());
			char_literal14=(Token)match(input,27,FOLLOW_27_in_stmtWithSemi384);  
			stream_27.add(char_literal14);

			// AST REWRITE
			// elements: stmt
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 49:24: -> stmt
			{
				adaptor.addChild(root_0, stream_stmt.nextTree());
			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "stmtWithSemi"


	public static class stmt_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "stmt"
	// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:50:1: stmt : ( assignStmt | condStmt | whileStmt | forStmt | block );
	public final XParser.stmt_return stmt() throws RecognitionException {
		XParser.stmt_return retval = new XParser.stmt_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope assignStmt15 =null;
		ParserRuleReturnScope condStmt16 =null;
		ParserRuleReturnScope whileStmt17 =null;
		ParserRuleReturnScope forStmt18 =null;
		ParserRuleReturnScope block19 =null;


		try {
			// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:50:5: ( assignStmt | condStmt | whileStmt | forStmt | block )
			int alt3=5;
			switch ( input.LA(1) ) {
			case ID:
				{
				alt3=1;
				}
				break;
			case 36:
				{
				alt3=2;
				}
				break;
			case 43:
				{
				alt3=3;
				}
				break;
			case 35:
				{
				alt3=4;
				}
				break;
			case 31:
				{
				alt3=5;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:50:9: assignStmt
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_assignStmt_in_stmt396);
					assignStmt15=assignStmt();
					state._fsp--;

					adaptor.addChild(root_0, assignStmt15.getTree());

					}
					break;
				case 2 :
					// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:50:22: condStmt
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_condStmt_in_stmt400);
					condStmt16=condStmt();
					state._fsp--;

					adaptor.addChild(root_0, condStmt16.getTree());

					}
					break;
				case 3 :
					// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:50:33: whileStmt
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_whileStmt_in_stmt404);
					whileStmt17=whileStmt();
					state._fsp--;

					adaptor.addChild(root_0, whileStmt17.getTree());

					}
					break;
				case 4 :
					// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:50:45: forStmt
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_forStmt_in_stmt408);
					forStmt18=forStmt();
					state._fsp--;

					adaptor.addChild(root_0, forStmt18.getTree());

					}
					break;
				case 5 :
					// C:\\Users\\mahu\\OneDrive - student.dhbw-karlsruhe.de\\_Studium\\Theoriephase 4\\Compilerbau\\Übungen\\08.Antlr-Parser für X\\CC-Praxis-Antlr Parser fuer X-Leer\\CC-Praxis-Antlr Parser fuer X-Leer\\src\\de\\dhbw\\compiler\\antlrxparser\\X.g:50:55: block
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_block_in_stmt412);
					block19=block();
					state._fsp--;

					adaptor.addChild(root_0, block19.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "stmt"


	public static class declaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};

